samples/_failures_safe/1761181150_a5abb6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d98ba2d5.c: In function ‘token_type_to_string’:
./samples/SAFE/__tmp_d98ba2d5.c:169:9: error: expected declaration or statement at end of input
  169 |         case TOKEN_IDENTIFIER: return "IDENTIFIER";
      |         ^~~~
./samples/SAFE/__tmp_d98ba2d5.c:169:9: error: expected declaration or statement at end of input
